apps/media/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - prowlarr.benwoodward.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prowlarr
          port: 9696
